Moving around Publishing options to conserve vertical space Moving around Add,Reorder and expand/collapse toggle to conserve vertical space Added in floating css classes for usage Cleaned up a minor bug where column widths could be inadvertently made too small

--- a/assets/scss/mcs/_structure.scss
+++ b/assets/scss/mcs/_structure.scss
@@ -72,3 +72,11 @@
 	left: 0;
 	z-index: 100;
 }
+
+.mcs-left {
+  float:left;
+}
+
+.mcs-right {
+  float:right;
+}
